syntax="proto2";

package service;
option java_package = "com.github.wenweihu86.raft.example.server.service";
option java_outer_classname = "ExampleProto";

message SetRequest {
    optional string key = 1;
    optional string value = 2;
}

message SetResponse {
    optional bool success = 1;
}

message GetRequest {
    optional string key = 1;
}

message GetResponse {
    optional string value = 1;
}

